Setup for Github Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactjs-movie-list",
   "version": "0.1.0",
+  "homepage": "https://verge2015.github.io/reactjs-movie-list/",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
